fix [#35825] "Find missing files" seems to search for files which are not missing Made finding paths for files that exist optional (and off by default), since its handy for relocating projects.